Fixed Menu icon visibility issue

--- a/src/CSS/Navbar.css
+++ b/src/CSS/Navbar.css
@@ -83,12 +83,14 @@
   color: rgb(113, 230, 113);
 }
 .menu_button {
-  position: absolute;
+  position: fixed;
   top: 2rem;
   right: 0rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
+  z-index: 9999999;
 }
 /* remix icon */
 .ri-menu-fill,
